--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,27 +1,10 @@
-          <ul class="nav navbar-nav">
-            <li>
-              <a href="/categories.html">
-                分 类
-              </a>
-            </li>
-            <li>
-              <a href="/tags.html">
-                标 签
-              </a>
-            </li>
-            <li>
-              <a href="/archives.html">
-                归 档
-              </a>
-            </li>
-            <li>
-              <a href="/faqs.html">
-                备 忘
-              </a>
-            </li>
-            <li>
-              <a href="/about.html">
-                关 于
-              </a>
-            </li>
-          </ul>
+<div class="nav">
+    <div class="nav_nav">
+        <a class="nav_a1" href="{{ site.url }}/">首页</a>
+        <a href="{{ site.url }}/categories/">分类</a>
+        <a class="nav_a1" href="{{ site.url }}/wiki/">维基</a>
+        <a href="{{ site.url }}/links/">链接</a>
+        <a class="nav_a1" href="{{ site.url }}/about/">关于</a>
+    </div>
+    <div class="nav_rss"><a href="{{ site.url }}/sitemap.xml" style="display:none;">SITEMAP</a><a href="{{ site.url }}/feed.xml" target="_blank">订阅</a></div>
+</div>
