--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,9 +1,16 @@
 {% include header.html %}
-<div class="container">
-    {% include navigation.html %}
-    <div class="main">
-        <h2> {% if page.title %} {{ page.title }} {% else %} {{ site.title }} {% endif %} </h2>
-        {{ content }}
+
+<div class="wrap">
+    <div class="container container-left">
+        <div class="row">
+            <div class="col-md-3 hidden-xs">
+                {% include sidebar.html %}
+            </div>
+            <div class="col-md-9">
+                {{ content }}
+            </div>
+        </div>
     </div>
+
+    {% include footer.html %}
 </div>
-{% include footer.html %}
