--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,47 +1,36 @@
-<aside id="sidebar">
-  <div id="sidebar-left">
-    <a id="sidebar-avatar" href="{{ "/" }}">
-      <img id="sidebar-avatar-img" alt="{{ site.tittle }}" src="http://cn.gravatar.com/avatar/ac952cea956802b7b690bb2e310adf16.jpg?size=200"/>
-    </a>
-
-    <div id="sidebar-social">
-      <a href="/atom.xml" target="_blank" class="sidebar-social-icon feed"></a>
-      {% include social.html %}
+<div class="sidebar">
+  <div class="container sidebar-sticky">
+    <div class="sidebar-about">
+      <h1>
+        <a href="{{ site.baseurl }}">
+          {{ site.title }}
+        </a>
+      </h1>
+      <p class="lead">{{ site.description }}</p>
     </div>
 
-    <ul id="sidebar-tags">
-      <li class="sidebar-tag active" data-filter="all">全部文章</li>
-      {% if site.filter == 'category' %}
-        {% assign categories_list = site.categories | sort %}
-        {% for category in categories_list %}
-          <li class="sidebar-tag" data-filter="{{ category | first }}">{{ category | first }}</li>
-        {% endfor %}
-      {% elsif site.filter == 'tag' %}
-        {% for tag in site.tags %}
-          <li class="sidebar-tag" data-filter="{{ tag | first }}">{{ tag | first }}</li>
-        {% endfor %}
-      {% endif %}
-    </ul>
-  </div>
+    <nav class="sidebar-nav">
+      <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="{{ site.baseurl }}">Home</a>
 
-  <div id="sidebar-right">
-    <div id="search-box">
-      <input id="search-input" type="text" placeholder="Search" />
-    </div>
-    <nav id="toc">
-      {% if site.filter == 'category' %}
-        {% for post in site.posts %}
-          <a class="toc-link" data-tags="{{ post.categories | join: ' ' }}" href="{{ post.url }}">
-            {% if post.slug %}{{ post.slug }}{% else %}{{ post.title }}{% endif %}
-          </a>
-        {% endfor %}
-      {% elsif site.filter == 'tag' %}
-        {% for post in site.posts %}
-          <a class="toc-link" data-tags="{{ post.tags | join: ' ' }}" href="{{ post.url }}">
-            {% if post.slug %}{{ post.slug }}{% else %}{{ post.title }}{% endif %}
-          </a>
-        {% endfor %}
-      {% endif %}
+      {% comment %}
+        The code below dynamically generates a sidebar nav of pages with
+        `layout: page` in the front-matter. See readme for usage.
+      {% endcomment %}
+
+      {% assign pages_list = site.pages %}
+      {% for node in pages_list %}
+        {% if node.title != null %}
+          {% if node.layout == "page" %}
+            <a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{ node.url }}">{{ node.title }}</a>
+          {% endif %}
+        {% endif %}
+      {% endfor %}
+
+      <a class="sidebar-nav-item" href="{{ site.github.repo }}/archive/v{{ site.version }}.zip">Download</a>
+      <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub project</a>
+      <span class="sidebar-nav-item">Currently v{{ site.version }}</span>
     </nav>
+
+    <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
   </div>
-</aside>
+</div>
