--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,27 +1,25 @@
 ---
 layout: default
 ---
-<article class="post container">
-  <div class="post-meta">
-    <span class="post-meta-span date">{{ page.date | date:"%Y年%m月%d日" }}</span>
-    {% if page.tags.size > 0 %}
-    <span class="post-meta-span tag">{{ page.tags | join: ', ' }}</span>
-    {% endif %}
-  </div>
-  <h1 class="post-title">{% if page.slug %}{{ page.slug }}{% else %}{{ page.title }}{% endif %}</h1>
-  {{ content }}
-</article>
 
-<div class="post-share">
-  <div class="container">
-    <a href="https://twitter.com/share?url={{ page.url | absolute_url }}&text={% if page.slug %}{{ page.slug }}{% else %}{{ page.title }}{% endif %}" target="_blank" class="post-share-icon twitter"></a>
-    <a href="https://www.evernote.com/clip.action?url={{ page.url | absolute_url }}&title={% if page.slug %}{{ page.slug }}{% else %}{{ page.title }}{% endif %}" target="_blank" class="post-share-icon evernote"></a>
-    <a href="http://service.weibo.com/share/share.php?url={{ page.url | absolute_url }}&title={% if page.slug %}{{ page.slug }}{% else %}{{ page.title }}{% endif %}" target="_blank" class="post-share-icon weibo"></a>
-  </div>
+<div class="post">
+  <h1 class="post-title">{{ page.title }}</h1>
+  <span class="post-date">{{ page.date | date_to_string }}</span>
+  {{ content }}
 </div>
 
-<div class="comment container">
-  <div id="disqus_thread">
-    {% include duoshuo %}
-  </div>
+<div class="related">
+  <h2>Related Posts</h2>
+  <ul class="related-posts">
+    {% for post in site.related_posts limit:3 %}
+      <li>
+        <h3>
+          <a href="{{ post.url }}">
+            {{ post.title }}
+            <small>{{ post.date | date_to_string }}</small>
+          </a>
+        </h3>
+      </li>
+    {% endfor %}
+  </ul>
 </div>
